--- a/GroupProject.ipynb
+++ b/GroupProject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e6deb1b6",
    "metadata": {},
    "outputs": [
@@ -17,7 +17,8 @@
    ],
    "source": [
     "print(\"version1\")\n",
-    "print(\"version2\")"
+    "print(\"version2\")\n",
+    "print(\"version3\")"
    ]
   }
  ],
