--- a/GroupProject.ipynb
+++ b/GroupProject.ipynb
@@ -11,13 +11,33 @@
      "output_type": "stream",
      "text": [
       "version1\n",
-      "version2\n"
+      "version2\n",
+      "Dit is een GitHub testfase\n"
      ]
     }
    ],
    "source": [
     "print(\"version1\")\n",
-    "print(\"version2\")"
+    "print(\"version2\")\n",
+    "print(\"Dit is een GitHub testfase\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b835f074",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dit is nog een testfase.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Dit is nog een testfase.\")"
    ]
   }
  ],
@@ -37,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
