Full Run of GetYouStartedPt1

--- a/GetYouStartedPt1.ipynb
+++ b/GetYouStartedPt1.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,25 +34,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['satisfaction.csv',\n",
-       " '.DS_Store',\n",
-       " 'stops.csv',\n",
-       " 'tickets.csv',\n",
-       " 'stations.csv',\n",
-       " 'subscriptions.csv',\n",
+       "['.DS_Store',\n",
        " 'facilities.csv',\n",
+       " 'incidents.csv',\n",
+       " 'Overview_NMBS_data.png',\n",
+       " 'satisfaction.csv',\n",
+       " 'stations.csv',\n",
+       " 'stops.csv',\n",
+       " 'subscriptions.csv',\n",
+       " 'tickets.csv',\n",
+       " 'train_3605.png',\n",
        " 'travelers.csv',\n",
-       " 'Trips',\n",
-       " 'incidents.csv']"
+       " 'Trips']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,23 +69,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['satisfaction.csv',\n",
-       " 'stops.csv',\n",
-       " 'tickets.csv',\n",
+       "['facilities.csv',\n",
+       " 'incidents.csv',\n",
+       " 'satisfaction.csv',\n",
        " 'stations.csv',\n",
+       " 'stops.csv',\n",
        " 'subscriptions.csv',\n",
-       " 'facilities.csv',\n",
-       " 'travelers.csv',\n",
-       " 'incidents.csv']"
+       " 'tickets.csv',\n",
+       " 'travelers.csv']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,22 +102,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Trips_27_09_2025.csv',\n",
-       " 'Trips_22_09_2025.csv',\n",
-       " 'Trips_28_09_2025.csv',\n",
-       " 'Trips_24_09_2025.csv',\n",
+       "['Trips_22_09_2025.csv',\n",
        " 'Trips_23_09_2025.csv',\n",
+       " 'Trips_24_09_2025.csv',\n",
+       " 'Trips_25_09_2025.csv',\n",
        " 'Trips_26_09_2025.csv',\n",
-       " 'Trips_25_09_2025.csv']"
+       " 'Trips_27_09_2025.csv',\n",
+       " 'Trips_28_09_2025.csv']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +277,7 @@
        "4             gent-sint-pieters  Standard Ticket   2nd  16.24         NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +393,7 @@
        "4   2nd  2025-04-24  2026-04-24  315.50  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +421,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +449,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +530,7 @@
        "4  2025-09-22 05:01:00"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +609,7 @@
        "4  2025-04-24  2026-04-24"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +693,7 @@
        "Freq: M, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +722,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +750,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1064,7 @@
        "4             gent-sint-pieters  Standard Ticket   2nd  16.24         NaN  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1180,7 @@
        "4   2nd 2025-04-24 2026-04-24  315.50  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1201,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1252,7 @@
        "True"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1378,7 @@
        "4             gent-sint-pieters  Standard Ticket   2nd  16.24         NaN  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1388,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1494,7 @@
        "4   2nd 2025-04-24 2026-04-24  315.50  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1677,7 @@
        "185841  Subscription   2nd    NaN  d232cb95-23cd-45f0-84e7-a53069917f1a  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1694,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1718,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1733,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1937,7 +1939,7 @@
        "[111298 rows x 8 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1949,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1958,7 +1960,7 @@
        "array([True], dtype=object)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1984,7 +1986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2182,7 +2184,7 @@
        "4            2025-09-22  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2202,7 +2204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -3318,7 +3320,7 @@
        "1980                     NaN          2025-09-22                   NaN  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3330,7 +3332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -3339,7 +3341,7 @@
        "39"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3363,7 +3365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -3912,7 +3914,7 @@
        "1980                     NaN          2025-09-22                   NaN  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3940,16 +3942,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "142.23529411764707"
+       "np.float64(142.23529411764707)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3961,16 +3963,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "134.76470588235293"
+       "np.float64(134.76470588235293)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3989,9 +3991,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[75]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# import package\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "# import package\n",
     "import matplotlib.pyplot as plt"
@@ -3999,7 +4013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4039,7 +4053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4086,7 +4100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4234,7 +4248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4390,7 +4404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4403,7 +4417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4416,7 +4430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4521,7 +4535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4648,7 +4662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4658,7 +4672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4789,7 +4803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4827,7 +4841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4926,7 +4940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4938,7 +4952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4961,7 +4975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5054,7 +5068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5150,7 +5164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5160,7 +5174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5170,7 +5184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5180,7 +5194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5289,7 +5303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5416,7 +5430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5650,7 +5664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5705,7 +5719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5762,7 +5776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5868,7 +5882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5878,7 +5892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5888,7 +5902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5973,7 +5987,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
