Adaptations to Infrastructure_Demand_Impact

--- a/GetYouStartedPt1.ipynb
+++ b/GetYouStartedPt1.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,9 +116,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime_of_purchase</th>\n",
+       "      <th>start_station</th>\n",
+       "      <th>end_station</th>\n",
+       "      <th>ticket_type</th>\n",
+       "      <th>class</th>\n",
+       "      <th>price</th>\n",
+       "      <th>customer_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-09-22 05:00:00</td>\n",
+       "      <td>delta</td>\n",
+       "      <td>brussel-noord/bruxelles-nord</td>\n",
+       "      <td>Standard Ticket</td>\n",
+       "      <td>1st</td>\n",
+       "      <td>4.53</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-09-22 05:00:00</td>\n",
+       "      <td>leuven</td>\n",
+       "      <td>antwerpen-centraal</td>\n",
+       "      <td>Standard Ticket</td>\n",
+       "      <td>2nd</td>\n",
+       "      <td>6.50</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-09-22 05:00:00</td>\n",
+       "      <td>brussel-centraal/bruxelles-central</td>\n",
+       "      <td>zellik</td>\n",
+       "      <td>Standard Multi</td>\n",
+       "      <td>1st</td>\n",
+       "      <td>16.10</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-09-22 05:01:00</td>\n",
+       "      <td>brussels airport - zaventem</td>\n",
+       "      <td>oostende</td>\n",
+       "      <td>Standard Multi</td>\n",
+       "      <td>2nd</td>\n",
+       "      <td>10.50</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-09-22 05:01:00</td>\n",
+       "      <td>marloie</td>\n",
+       "      <td>gent-sint-pieters</td>\n",
+       "      <td>Standard Ticket</td>\n",
+       "      <td>2nd</td>\n",
+       "      <td>16.24</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  datetime_of_purchase                       start_station  \\\n",
+       "0  2025-09-22 05:00:00                               delta   \n",
+       "1  2025-09-22 05:00:00                              leuven   \n",
+       "2  2025-09-22 05:00:00  brussel-centraal/bruxelles-central   \n",
+       "3  2025-09-22 05:01:00         brussels airport - zaventem   \n",
+       "4  2025-09-22 05:01:00                             marloie   \n",
+       "\n",
+       "                    end_station      ticket_type class  price customer_id  \n",
+       "0  brussel-noord/bruxelles-nord  Standard Ticket   1st   4.53         NaN  \n",
+       "1            antwerpen-centraal  Standard Ticket   2nd   6.50         NaN  \n",
+       "2                        zellik   Standard Multi   1st  16.10         NaN  \n",
+       "3                      oostende   Standard Multi   2nd  10.50         NaN  \n",
+       "4             gent-sint-pieters  Standard Ticket   2nd  16.24         NaN  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Show first 5 rows\n",
     "tickets_df.head()"
@@ -126,9 +232,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>start_station</th>\n",
+       "      <th>end_station</th>\n",
+       "      <th>class</th>\n",
+       "      <th>start_date</th>\n",
+       "      <th>end_date</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>d232cb95-23cd-45f0-84e7-a53069917f1a</td>\n",
+       "      <td>liège-guillemins</td>\n",
+       "      <td>gent-sint-pieters</td>\n",
+       "      <td>2nd</td>\n",
+       "      <td>2025-08-01</td>\n",
+       "      <td>2026-08-01</td>\n",
+       "      <td>628.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8d57a105-c25c-4d51-b438-db2f15add8b0</td>\n",
+       "      <td>ottignies</td>\n",
+       "      <td>silly</td>\n",
+       "      <td>2nd</td>\n",
+       "      <td>2025-08-14</td>\n",
+       "      <td>2026-08-14</td>\n",
+       "      <td>357.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>a5540a29-15aa-49d9-8eb2-8f182855bcd5</td>\n",
+       "      <td>ninove</td>\n",
+       "      <td>charleroi-sud</td>\n",
+       "      <td>2nd</td>\n",
+       "      <td>2024-12-31</td>\n",
+       "      <td>2025-12-31</td>\n",
+       "      <td>417.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>033af55a-84f7-4d11-adcd-301bf6df974b</td>\n",
+       "      <td>nessonvaux</td>\n",
+       "      <td>antwerpen-centraal</td>\n",
+       "      <td>2nd</td>\n",
+       "      <td>2025-01-12</td>\n",
+       "      <td>2026-01-12</td>\n",
+       "      <td>604.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6b31bdba-22e3-4e45-bdae-cfb9831b9fef</td>\n",
+       "      <td>ottignies</td>\n",
+       "      <td>asse</td>\n",
+       "      <td>2nd</td>\n",
+       "      <td>2025-04-24</td>\n",
+       "      <td>2026-04-24</td>\n",
+       "      <td>315.50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            customer_id     start_station         end_station  \\\n",
+       "0  d232cb95-23cd-45f0-84e7-a53069917f1a  liège-guillemins   gent-sint-pieters   \n",
+       "1  8d57a105-c25c-4d51-b438-db2f15add8b0         ottignies               silly   \n",
+       "2  a5540a29-15aa-49d9-8eb2-8f182855bcd5            ninove       charleroi-sud   \n",
+       "3  033af55a-84f7-4d11-adcd-301bf6df974b        nessonvaux  antwerpen-centraal   \n",
+       "4  6b31bdba-22e3-4e45-bdae-cfb9831b9fef         ottignies                asse   \n",
+       "\n",
+       "  class  start_date    end_date   price  \n",
+       "0   2nd  2025-08-01  2026-08-01  628.96  \n",
+       "1   2nd  2025-08-14  2026-08-14  357.50  \n",
+       "2   2nd  2024-12-31  2025-12-31  417.28  \n",
+       "3   2nd  2025-01-12  2026-01-12  604.18  \n",
+       "4   2nd  2025-04-24  2026-04-24  315.50  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Show first 5 rows\n",
     "subscriptions_df.head()"
