Toevoeging Data Preparation en uitbreiding StationCoverageAccesibility

--- a/StationCoverageAccesibility.ipynb
+++ b/StationCoverageAccesibility.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "9df49593",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "8ff0c495",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
        " 'incidents.csv']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "5980908a",
    "metadata": {},
    "outputs": [],
@@ -83,23 +83,249 @@
    "id": "bfccf18c",
    "metadata": {},
    "source": [
-    "# Questions \n",
-    "\n",
-    "*Understand how well stations are distributed across Belgium and identify underserved regions.*\n",
-    "1. Plot the number of stations per city, highlighting cities with multiple stations.\n",
-    "2. Is the number of stations per city proportional to its number of inhabitants? Plot and\n",
-    "analyze the relationship.\n",
-    "3. Create a heat map showing the number of stations per province. Adjust for population\n",
-    "to identify potential under-served areas.\n",
-    "4. Which cities have poor access to train services? Consider metrics such as travel time\n",
-    "or distance to the nearest station. Based on your analysis, would new routes be\n",
-    "justified?"
+    "# Questions \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c093a9d1",
+   "metadata": {},
+   "source": [
+    "### 1) Plot the number of stations per city, highlighting cities with multiple stations "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9935820",
+   "id": "0648cbfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      1030\n",
+       "1      1140\n",
+       "2      1130\n",
+       "3      1800\n",
+       "4      1130\n",
+       "       ... \n",
+       "569    8900\n",
+       "570    8970\n",
+       "571    8800\n",
+       "572    8870\n",
+       "573    8770\n",
+       "Name: zip, Length: 574, dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stations = stations[stations['country-code'] == 'be']\n",
+    "facilities = facilities[facilities['zip'].notna()]\n",
+    "stations_facilities = pd.merge(stations, facilities, on='station_id', how='outer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9f6fc8c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_counts_df = stations_facilities['zip'].value_counts().reset_index()\n",
+    "zip_counts_df.columns = ['zip', 'count']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b5d43031",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      zip                                               name  count\n",
+      "0    1000  Brussel-Centraal/Bruxelles-Central, Brussel-Co...      3\n",
+      "1    1020            Bockstael, Thurn en Taxis/Tour et Taxis      2\n",
+      "2    1030  Brussel-Noord/Bruxelles-Nord, Meiser, Schaarbe...      3\n",
+      "3    1040          Brussel-Schuman/Bruxelles-Schuman, Merode      2\n",
+      "4    1050  Boondaal/Boondael, Brussel-Luxemburg/Bruxelles...      4\n",
+      "..    ...                                                ...    ...\n",
+      "377  9890                                       Gavere-Asper      1\n",
+      "378  9900                                              Eeklo      1\n",
+      "379  9940                                 Evergem, Sleidinge      2\n",
+      "380  9950                                         Waarschoot      1\n",
+      "381  CHAP                                            Chapois      1\n",
+      "\n",
+      "[382 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group by ZIP code and aggregate facility names + count\n",
+    "zip_summary = (\n",
+    "    facilities\n",
+    "    .groupby('zip')\n",
+    "    .agg({\n",
+    "        'name' : lambda x: ', '.join(sorted(x.unique())),\n",
+    "        # join all unique facility names in one cell\n",
+    "        'zip': 'count'  # this will be renamed below\n",
+    "    })\n",
+    "    .rename(columns={'zip': 'count'})\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "print(zip_summary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "094d4dbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>zip</th>\n",
+       "      <th>name</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>Brussel-Centraal/Bruxelles-Central, Brussel-Co...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1020</td>\n",
+       "      <td>Bockstael, Thurn en Taxis/Tour et Taxis</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1030</td>\n",
+       "      <td>Brussel-Noord/Bruxelles-Nord, Meiser, Schaarbe...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1040</td>\n",
+       "      <td>Brussel-Schuman/Bruxelles-Schuman, Merode</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1050</td>\n",
+       "      <td>Boondaal/Boondael, Brussel-Luxemburg/Bruxelles...</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>368</th>\n",
+       "      <td>9700</td>\n",
+       "      <td>Eine, Oudenaarde</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>373</th>\n",
+       "      <td>9850</td>\n",
+       "      <td>Hansbeke, Landegem</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>374</th>\n",
+       "      <td>9860</td>\n",
+       "      <td>Balegem-Dorp, Balegem-Zuid, Landskouter, Moort...</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>375</th>\n",
+       "      <td>9880</td>\n",
+       "      <td>Aalter, Maria-Aalter</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>379</th>\n",
+       "      <td>9940</td>\n",
+       "      <td>Evergem, Sleidinge</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>120 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      zip                                               name  count\n",
+       "0    1000  Brussel-Centraal/Bruxelles-Central, Brussel-Co...      3\n",
+       "1    1020            Bockstael, Thurn en Taxis/Tour et Taxis      2\n",
+       "2    1030  Brussel-Noord/Bruxelles-Nord, Meiser, Schaarbe...      3\n",
+       "3    1040          Brussel-Schuman/Bruxelles-Schuman, Merode      2\n",
+       "4    1050  Boondaal/Boondael, Brussel-Luxemburg/Bruxelles...      4\n",
+       "..    ...                                                ...    ...\n",
+       "368  9700                                   Eine, Oudenaarde      2\n",
+       "373  9850                                 Hansbeke, Landegem      2\n",
+       "374  9860  Balegem-Dorp, Balegem-Zuid, Landskouter, Moort...      5\n",
+       "375  9880                               Aalter, Maria-Aalter      2\n",
+       "379  9940                                 Evergem, Sleidinge      2\n",
+       "\n",
+       "[120 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiple_stations = zip_summary[zip_summary['count'] > 1]\n",
+    "multiple_stations "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae429575",
+   "metadata": {},
+   "source": [
+    "### 2) Is the number of stations per city proportional to its number of inhabitants? Plot and analyze the relationship."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f336be51",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -107,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd6f1cf5",
+   "id": "ed8b0129",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -115,18 +341,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39a79ebe",
+   "id": "f9caeaaf",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30092367",
+   "cell_type": "markdown",
+   "id": "3b74e7eb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 3) Create a heat map showing the number of stations per province. Adjust for population to identify potential under-served areas.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30d30b27",
+   "metadata": {},
+   "source": [
+    "### 4) Which cities have poor access to train services? Consider metrics such as ravel time or distance to the nearest station. Based on your analysis, would new routes be justified?"
+   ]
   },
   {
    "cell_type": "markdown",
